growthmodels 1.3.0
--------------------------------------------------------------------------------
* `mitscherlich` alias to the `mitcherlich` function

growthmodels 1.2.0
--------------------------------------------------------------------------------

* This version includes new nonlinear growth models:
  Blumberg
* Mitcherlich growth model can be called using mitcherlich or mitscherlich
* Include the inverse functions for the models

growthmodels 1.1.0
--------------------------------------------------------------------------------

* This version includes new nonlinear growth models:
  Brody
  Log-logistic,
  Morgan-Mercer-Flodin,
  Schnute,
  Stannard.

growthmodels 1.0.0
--------------------------------------------------------------------------------

* `growthmodels` includes the following nonlinear growth models:
  Chapman-Richards,
  Generalised Logistic,
  Generalised Richard,
  Gompertz,
  Logistic,
  Mitcherlich,
  Monomolecular,
  Negative exponential,
  Richard’s,
  von Bertalanffy,
  Weibull.