@@ -5,10 +5,11 @@ Version: 1.2.0
 Date: 2013-11-23
 Author: Daniel Rodriguez
 Maintainer: Daniel Rodriguez <daniel.rodriguez.perez@gmail.com>
-Description: A compilation of nonlinear growth models
+Description: A compilation of nonlinear growth models.
 License: GPL-3
 URL: https://github.com/drodriguezperez/growthmodels
 BugReports: https://github.com/drodriguezperez/growthmodels/issues
 Suggests:
     testthat
 Roxygen: list(wrap = FALSE)
+RoxygenNote: 6.0.1
