@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.0.2): do not edit by hand
+# Generated by roxygen2: do not edit by hand
 
 export(blumberg)
 export(blumberg.inverse)
@@ -12,6 +12,8 @@ export(generalisedRichard)
 export(generalisedRichard.inverse)
 export(gompertz)
 export(gompertz.inverse)
+export(janoschek)
+export(janoschek.inverse)
 export(logistic)
 export(logistic.inverse)
 export(loglogistic)
