@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/blumberg.R
 \name{blumberg}
 \alias{blumberg}
 \alias{blumberg.inverse}
@@ -27,14 +28,15 @@ Computes the Blumberg growth model and its inverse
 }
 \examples{
 growth <- blumberg(0:10, 10, 2, 0.5)
+
 # Calculate inverse function
-time <- blumberg.inverse(growth, 12, 2, 0.5)
-}
-\author{
-Daniel Rodriguez
+time <- blumberg.inverse(growth, 12, 2, 0.5) 
+
 }
 \references{
 A. Tsoularis and J. Wallace, "Analysis of logistic growth models.,"
 Math Biosci, vol. 179, no. 1, pp. 21-55, Jul. 2002.
 }
-
+\author{
+Daniel Rodriguez
+}
