@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/brody.R
 \name{brody}
 \alias{brody}
 \alias{brody.inverse}
@@ -25,11 +26,10 @@ Computes the Brody growth model and its inverse
 }
 \examples{
 growth <- brody(0:10, 10, 5, 0.3)
+
 # Calculate inverse function
 time <- brody.inverse(growth, 10, 5, 0.3)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 M. M. Kaps, W. O. W. Herring, and W. R. W. Lamberson, "Genetic and
@@ -37,4 +37,6 @@ environmental parameters for traits derived from the Brody growth curve and
 their relationships with weaning weight in Angus cattle.," Journal of
 Animal Science, vol. 78, no. 6, pp. 1436-1442, May 2000.
 }
-
+\author{
+Daniel Rodriguez
+}
