@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/logistic.R
 \name{generalisedLogistic}
 \alias{generalisedLogistic}
 \alias{generalisedLogistic.inverse}
@@ -29,13 +30,14 @@ Computes the Generalised Logistic growth model
 }
 \examples{
 growth <- generalisedLogistic(0:10, 5, 10, 0.3, 0.5, 3)
+
 # Calculate inverse function
 time <- generalisedLogistic.inverse(growth, 5, 10, 0.3, 0.5, 3)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 http://en.wikipedia.org/wiki/Generalised_logistic_function
 }
-
+\author{
+Daniel Rodriguez
+}
