@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/richard.R
 \name{generalisedRichard}
 \alias{generalisedRichard}
 \alias{generalisedRichard.inverse}
@@ -31,12 +32,13 @@ Computes the Generalised Richard growth model and its inverse
 }
 \examples{
 growth <- generalisedRichard(0:10, 5, 10, 0.3, 0.5, 1, 3)
+
 time <- generalisedRichard.inverse(growth, 5, 10, 0.3, 0.5, 1, 3)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 http://en.wikipedia.org/wiki/Generalised_logistic_function
 }
-
+\author{
+Daniel Rodriguez
+}
