@@ -1,11 +1,12 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/growthmodels.R
 \docType{package}
 \name{growthmodels-package}
-\alias{growthmodels}
 \alias{growthmodels-package}
+\alias{growthmodels}
 \title{growthmodels: Nonlinear Growth Models}
 \description{
-A compilation of nonlinear growth models used in many areas.
+A compilation of nonlinear growth models.
 }
 \details{
 \tabular{ll}{
@@ -13,9 +14,6 @@ A compilation of nonlinear growth models used in many areas.
   Version: \tab 1.2.0 \cr
   License: \tab GPL-3 \cr
 }
-}
-\author{
-Daniel Rodriguez \email{daniel.rodriguez.perez@gmail.com}
 }
 \references{
 D. Fekedulegn, M. Mac Siurtain, and J. Colbert, "Parameter estimation of
@@ -34,6 +32,11 @@ A. Khamiz, Z. Ismail, and A. T. Muhammad, "Nonlinear growth models for
 modeling oil palm yield growth," Journal of Mathematics and Statistics,
 vol. 1, no. 3, p. 225, 2005.
 
+Michael J. Panik, "Growth Curve Modeling: Theory and Applications",
+John Wiley & Sons, December 2013.
+
 http://en.wikipedia.org/wiki/Generalised_logistic_function
 }
-
+\author{
+Daniel Rodriguez \email{daniel.rodriguez.perez@gmail.com}
+}
