@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/logistic.R
 \name{logistic}
 \alias{logistic}
 \alias{logistic.inverse}
@@ -25,15 +26,16 @@ Computes the Logistic growth model
 }
 \examples{
 growth <- logistic(0:10, 10, 0.5, 0.3)
+
 # Calculate inverse function
 time <- logistic.inverse(growth, 10, 0.5, 0.3)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 D. Fekedulegn, M. Mac Siurtain, and J. Colbert, "Parameter estimation of
 nonlinear growth models in forestry," Silva Fennica, vol. 33, no. 4, pp.
 327-336, 1999.
 }
-
+\author{
+Daniel Rodriguez
+}
