@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/loglogistic.R
 \name{loglogistic}
 \alias{loglogistic}
 \alias{loglogistic.inverse}
@@ -25,15 +26,16 @@ Computes the Log-logistic growth model
 }
 \examples{
 growth <- loglogistic(0:10, 10, 0.5, 0.3)
+
 # Calculate inverse function
 time <- loglogistic.inverse(growth, 10, 0.5, 0.3)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 A. Khamiz, Z. Ismail, and A. T. Muhammad, "Nonlinear growth models for
 modeling oil palm yield growth," Journal of Mathematics and Statistics,
 vol. 1, no. 3, p. 225, 2005.
 }
-
+\author{
+Daniel Rodriguez
+}
