@@ -1,8 +1,9 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/mitcherlich.R
 \name{mitcherlich}
 \alias{mitcherlich}
-\alias{mitcherlich.inverse}
 \alias{mitscherlich}
+\alias{mitcherlich.inverse}
 \alias{mitscherlich.inverse}
 \title{Mitcherlich growth model}
 \usage{
@@ -27,15 +28,16 @@ Computes the Mitcherlich growth model
 }
 \examples{
 growth <- mitcherlich(0:10, 10, 0.5, 0.3)
+
 # Calculate inverse function
 time <- mitcherlich.inverse(growth, 10, 0.5, 0.3)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 D. Fekedulegn, M. Mac Siurtain, and J. Colbert, "Parameter estimation of
 nonlinear growth models in forestry," Silva Fennica, vol. 33, no. 4, pp.
 327-336, 1999.
 }
-
+\author{
+Daniel Rodriguez
+}
