@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/mmf.R
 \name{mmf}
 \alias{mmf}
 \alias{mmf.inverse}
@@ -27,15 +28,16 @@ Computes the Morgan-Mercer-Flodin growth model
 }
 \examples{
 growth <- mmf(0:10, 10, 0.5, 4, 1)
+
 # Calculate inverse function
 time <- mmf.inverse(growth, 10, 0.5, 4, 1)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 A. Khamiz, Z. Ismail, and A. T. Muhammad, "Nonlinear growth models for
 modeling oil palm yield growth," Journal of Mathematics and Statistics,
 vol. 1, no. 3, p. 225, 2005.
 }
-
+\author{
+Daniel Rodriguez
+}
