@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/negativeExponential.R
 \name{negativeExponential}
 \alias{negativeExponential}
 \alias{negativeExponential.inverse}
@@ -23,15 +24,16 @@ Computes the negative exponential growth model
 }
 \examples{
 growth <- negativeExponential(0:10, 1, 0.3)
+
 # Calculate inverse function
 time <- negativeExponential.inverse(growth, 10, 0.3)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 D. Fekedulegn, M. Mac Siurtain, and J. Colbert, "Parameter estimation of
 nonlinear growth models in forestry," Silva Fennica, vol. 33, no. 4, pp.
 327-336, 1999.
 }
-
+\author{
+Daniel Rodriguez
+}
