@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/richard.R
 \name{richard}
 \alias{richard}
 \alias{richard.inverse}
@@ -27,14 +28,15 @@ Computes the Richard growth model and its inverse
 }
 \examples{
 growth <- richard(0:10, 10, 0.5, 0.3, 0.5)
+
 time <- richard.inverse(growth, 10, 0.5, 0.3, 0.5)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 D. Fekedulegn, M. Mac Siurtain, and J. Colbert, "Parameter estimation of
 nonlinear growth models in forestry," Silva Fennica, vol. 33, no. 4, pp.
 327-336, 1999.
 }
-
+\author{
+Daniel Rodriguez
+}
