@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/schnute.R
 \name{schnute}
 \alias{schnute}
 \alias{schnute.inverse}
@@ -27,15 +28,16 @@ Computes the Schnute growth model
 }
 \examples{
 growth <- schnute(0:10, 10, 5, .5, .5)
+
 # Calculate inverse function
 time <- schnute.inverse(growth, 10, 5, .5, .5)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 A. Khamiz, Z. Ismail, and A. T. Muhammad, "Nonlinear growth models for
 modeling oil palm yield growth," Journal of Mathematics and Statistics,
 vol. 1, no. 3, p. 225, 2005.
 }
-
+\author{
+Daniel Rodriguez
+}
