@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/stannard.R
 \name{stannard}
 \alias{stannard}
 \alias{stannard.inverse}
@@ -27,15 +28,16 @@ Computes the Stannard growth model
 }
 \examples{
 growth <- stannard(0:10, 1, .2, .1, .5)
+
 # Calculate inverse function
 time <- stannard.inverse(growth, 1, .2, .1, .5)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 A. Khamiz, Z. Ismail, and A. T. Muhammad, "Nonlinear growth models for
 modeling oil palm yield growth," Journal of Mathematics and Statistics,
 vol. 1, no. 3, p. 225, 2005.
 }
-
+\author{
+Daniel Rodriguez
+}
