@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/weibull.R
 \name{weibull}
 \alias{weibull}
 \alias{weibull.inverse}
@@ -27,15 +28,16 @@ Computes the Weibull growth model
 }
 \examples{
 growth <- weibull(0:10, 10, 0.5, 0.3, 0.5)
+
 # Calculate inverse function
 time <- weibull.inverse(growth, 10, 0.5, 0.3, 0.5)
-}
-\author{
-Daniel Rodriguez
+
 }
 \references{
 D. Fekedulegn, M. Mac Siurtain, and J. Colbert, "Parameter estimation of
 nonlinear growth models in forestry," Silva Fennica, vol. 33, no. 4, pp.
 327-336, 1999.
 }
-
+\author{
+Daniel Rodriguez
+}
